--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/style.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0e64e7fc54.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700&display=swap" rel="stylesheet" />
     <title>Shakeane Hinds</title>
 </head>
 
 <body>
+    <!-- nav bar -->
     <nav class="nav-bar">
         <ul class="nav-list">
             <a href="https://www.behance.net/shakeanehinds" target="blank">
@@ -28,6 +29,8 @@
             </a>
         </ul>
     </nav>
+    <!-- nav bar -->
+    <!-- body content -->
     <main class="main-content">
 
         <div class="left-hero">
@@ -47,6 +50,7 @@
 
 
     </main>
+    <!-- content -->
 </body>
 
 </html>
