Added emojis... can't foget those Fixed layout issues

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     <nav class="nav-bar">
         <ul class="nav-list">
             <a href="https://www.behance.net/shakeanehinds" target="blank">
-                <li class="nav-item"><i class="fab fa-behance"></i></li>
+                <li class="nav-item icon"><i class="fab fa-behance"></i></li>
             </a>
             <a href="https://github.com/shakeanehinds" target="blank">
-                <li class="nav-item"><i class="fab fa-github"></i></li>
+                <li class="nav-item icon"><i class="fab fa-github"></i></li>
             </a>
             <a href="https://www.linkedin.com/in/shakeanehinds/" target="blank">
-                <li class="nav-item"><i class="fab fa-linkedin"></i></li>
+                <li class="nav-item icon"><i class="fab fa-linkedin"></i></li>
             </a>
             <a
                 href="mailto:shakeanehinds97@gmail.com?subject=Nice Portfolio!&body=Hey Shakeane,%0D%0A I'd love to to tallk more about your projects and possibly working together.">
-                <li class="nav-item"><i class="fas fa-envelope"></i></li>
+                <li class="nav-item icon"><i class="fas fa-envelope"></i></li>
             </a>
         </ul>
     </nav>
@@ -37,7 +37,7 @@
         <div class="left-hero">
 
             <h1 class="name">Shakeane</h1>
-            <h2 class="title">UI/UX Designer</h2>
+            <h2 class="title ux">UI/UX Designer 🎨</h2>
             <a href="https://www.behance.net/shakeanehinds" target="blank">
                 <div class="cta-button">
                     <span><i class="fas fa-arrow-left"></i></span>
@@ -50,7 +50,7 @@
         <div class="right-hero">
             
             <h1 class="name">Hinds</h1>
-            <h2 class="title">Software Developer</h2>
+            <h2 class="title dev">💻 Software Developer</h2>
             <a href="https://github.com/shakeanehinds" target="blank">
                 <div class="cta-button">
                     <p>Projects</p>
@@ -204,7 +204,7 @@
     </div>
     <!-- content -->
     <div class="copy">
-        <p>Made with <i class="fas fa-heart"></i> using a potato</p>
+        <p>Made with <i class="fas fa-heart icon"></i> using a potato</p>
     </div>
 </body>
 
