Added nav scroll bg logic

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/main.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0e64e7fc54.js" crossorigin="anonymous" defer></script>
+    <script src="/js/main.js" defer></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro:300,400,700&display=swap"
         rel="stylesheet">
     <title>Shakeane Hinds | Portfolio</title>
@@ -13,7 +14,7 @@
 
 <body>
     <!-- nav bar -->
-    <nav class="nav-bar">
+    <nav id="nav" class="nav-bar">
         <ul class="nav-list">
             <a href="https://www.behance.net/shakeanehinds" target="_blank">
                 <li class="nav-item icon"><i class="fab fa-behance"></i></li>
