Fixed toggle button

--- a/index.html
+++ b/index.html
@@ -1280,7 +1280,7 @@
             <div href="#" onclick="kill_motion()">
                 <div class="inner">
                     <i id="timesbtn" class="fas fa-times-circle"></i>
-                    <h3 class="tip">Toggle hover effect</h3>
+                    <h3 class="tip">Hover effect</h3>
                 </div>
             </div>
         </div>
