--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/main.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/0e64e7fc54.js" crossorigin="anonymous" defer></script>
-    <script src="/js/main.js" defer></script>
+    <script src="/js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro:300,400,700&display=swap"
         rel="stylesheet">
     <title>Shakeane Hinds | Portfolio</title>
