updated js and css file location

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="dist/css/main.min.css" rel="stylesheet">
+    <!-- <link href="css/main.css" rel="stylesheet"> -->
     <script src="https://kit.fontawesome.com/0e64e7fc54.js" crossorigin="anonymous" defer></script>
-    <script src="/js/main.js"></script>
+    <script src="/dist/js/main.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Source+Code+Pro:300,400,700&display=swap"
         rel="stylesheet">
     <title>Shakeane Hinds | Portfolio</title>
@@ -1276,14 +1277,14 @@
             <h3 class="tip">In Development..</h3>
         </div>
     </div>
-        <div class="info-left">
-            <div href="#" onclick="kill_motion()">
-                <div class="inner">
-                    <i id="timesbtn" class="fas fa-times-circle"></i>
-                    <h3 class="tip">Hover effect</h3>
-                </div>
+    <div class="info-left">
+        <div href="#" onclick="kill_motion()">
+            <div class="inner">
+                <i id="timesbtn" class="fas fa-times-circle"></i>
+                <h3 class="tip">Hover effect</h3>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
