--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 <body>
     <!-- nav bar -->
     <nav id="nav" class="nav-bar">
-        <ul class="nav-list">
+        <ul id="nav-links" class="nav-list">
             <a href="https://www.behance.net/shakeanehinds" target="_blank">
                 <li class="nav-item icon"><i class="fab fa-behance"></i></li>
             </a>
             <a href="https://github.com/shakeanehinds" target="_blank">
-                <li class="nav-item icon"><i class="fab fa-github"></i></li>
+                <li class="nav-item icon"><i class="fab fa-github-alt"></i></li>
             </a>
             <a href="https://www.linkedin.com/in/shakeanehinds/" target="_blank">
-                <li class="nav-item icon"><i class="fab fa-linkedin"></i></li>
+                <li class="nav-item icon"><i class="fab fa-linkedin-in"></i></li>
             </a>
             <a
                 href="mailto:shakeanehinds97@gmail.com?subject=Nice Portfolio!&body=Hey Shakeane,%0D%0A I'd love to to tallk more about your projects and possibly working together.">
@@ -630,14 +630,38 @@
         </section>
         <section>
             <h1 class="section-title">A few projects</h1>
-            <div class="section-body">
-                <div class="section-content">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta illo voluptatum culpa,
-                        reiciendis
-                        et, at tempore totam pariatur tempora odit laboriosam quos ad, dolores inventore deleniti ipsa.
-                        Nemo, possimus corrupti?.</p>
+            <div class="section-body two">
+                <div class="card-container">
+                    <img src="/assets/right.jpg" alt="project image" class="card-img">
+                    <div class="card-content">
+                        <h3 class="card-title">Online Resume</h3>
+                        <h4 class="card-subtitle">Last updated: 03.04.20</h4>
+                        <p class="card-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum
+                            dolor, blanditiis placeat reiciendis dolores tenetur vero cupiditate provident,
+                            accusantium animi incidunt eos dolorem omnis eum, aliquam et itaque culpa ipsam.</p>
+                        <div class="project-cta">
+                            <a href="https://github.com/shakeanehinds/shakeanehinds.github.io">
+                                <h5 class="tip">View Project.</h5>
+                            </a>
+                        </div>
+                    </div>
                 </div>
-                <div class="section-image"><img src="/assets/IMG-1139.jpg" alt=""></div>
+                <div class="card-container">
+                    <img src="/assets/right.jpg" alt="project image" class="card-img">
+                    <div class="card-content">
+                        <h3 class="card-title">Duck Buy</h3>
+                        <h4 class="card-subtitle">Last updated: 07.28.19</h4>
+                        <p class="card-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum
+                            dolor, blanditiis placeat reiciendis dolores tenetur vero cupiditate provident,
+                            accusantium animi incidunt eos dolorem omnis eum, aliquam et itaque culpa ipsam.</p>
+                        <div class="project-cta">
+                            <a href="https://github.com/shakeanehinds/DuckBuy">
+                                <h5 class="tip">View Project.</h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </section>
