Added project section styling

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
     <!-- nav bar -->
     <!-- hero desktop -->
     <div class="hero">
-
+        <div class="hero-name">
+            <h1>Shakeane Hinds</h1>
+        </div>
         <div id="left" class="left-hero left-hov">
 
-            <h1 class="name">Shakeane</h1>
+            <!-- <h1 class="name">Shakeane Hinds</h1> -->
             <h2 class="title ux">UI/UX Designer 🎨</h2>
             <a href="https://www.behance.net/shakeanehinds" target="_blank">
                 <div class="cta-button">
@@ -51,7 +53,7 @@
         </div>
         <div id="right" class="right-hero right-hov">
 
-            <h1 class="name">Hinds</h1>
+            <!-- <h1 class="name">Shakeane Hinds</h1> -->
             <h2 class="title dev">💻 Software Developer</h2>
             <a href="https://github.com/shakeanehinds" target="_blank">
                 <div class="cta-button">
@@ -631,36 +633,76 @@
         <section>
             <h1 class="section-title">A few projects</h1>
             <div class="section-body two">
-                <div class="card-container">
+                <div class="project-card">
                     <img src="/assets/right.jpg" alt="project image" class="card-img">
                     <div class="card-content">
-                        <h3 class="card-title">Online Resume</h3>
+                        <h3 class="card-title">Portfolio</h3>
                         <h4 class="card-subtitle">Last updated: 03.04.20</h4>
+                        <div class="tags">
+                            <div class="tag-icon">
+                                <h6>Javascript</h6>
+                            </div>
+                            <div class="tag-icon">
+                                <h6>Sass</h6>
+                            </div>
+                        </div>
                         <p class="card-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum
                             dolor, blanditiis placeat reiciendis dolores tenetur vero cupiditate provident,
                             accusantium animi incidunt eos dolorem omnis eum, aliquam et itaque culpa ipsam.</p>
                         <div class="project-cta">
                             <a href="https://github.com/shakeanehinds/shakeanehinds.github.io">
-                                <h5 class="tip">View Project.</h5>
+                                <h5 class="tip">View Project <i class="fas fa-long-arrow-alt-right"></i></h5>
                             </a>
                         </div>
                     </div>
                 </div>
-                <div class="card-container">
+                <div class="project-card">
                     <img src="/assets/right.jpg" alt="project image" class="card-img">
                     <div class="card-content">
-                        <h3 class="card-title">Duck Buy</h3>
-                        <h4 class="card-subtitle">Last updated: 07.28.19</h4>
+                        <h3 class="card-title">Portfolio</h3>
+                        <h4 class="card-subtitle">Last updated: 03.04.20</h4>
+                        <div class="tags">
+                            <div class="tag-icon">
+                                <h6>Javascript</h6>
+                            </div>
+                            <div class="tag-icon">
+                                <h6>Sass</h6>
+                            </div>
+                        </div>
                         <p class="card-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum
                             dolor, blanditiis placeat reiciendis dolores tenetur vero cupiditate provident,
                             accusantium animi incidunt eos dolorem omnis eum, aliquam et itaque culpa ipsam.</p>
                         <div class="project-cta">
-                            <a href="https://github.com/shakeanehinds/DuckBuy">
-                                <h5 class="tip">View Project.</h5>
+                            <a href="https://github.com/shakeanehinds/shakeanehinds.github.io">
+                                <h5 class="tip">View Project <i class="fas fa-long-arrow-alt-right"></i></h5>
                             </a>
                         </div>
                     </div>
                 </div>
+                <div class="project-card">
+                    <img src="/assets/right.jpg" alt="project image" class="card-img">
+                    <div class="card-content">
+                        <h3 class="card-title">Portfolio</h3>
+                        <h4 class="card-subtitle">Last updated: 03.04.20</h4>
+                        <div class="tags">
+                            <div class="tag-icon">
+                                <h6>Javascript</h6>
+                            </div>
+                            <div class="tag-icon">
+                                <h6>Sass</h6>
+                            </div>
+                        </div>
+                        <p class="card-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum
+                            dolor, blanditiis placeat reiciendis dolores tenetur vero cupiditate provident,
+                            accusantium animi incidunt eos dolorem omnis eum, aliquam et itaque culpa ipsam.</p>
+                        <div class="project-cta">
+                            <a href="https://github.com/shakeanehinds/shakeanehinds.github.io">
+                                <h5 class="tip">View Project <i class="fas fa-long-arrow-alt-right"></i></h5>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
 
 
             </div>
