fixed email typo

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="nav-item icon"><i class="fab fa-linkedin-in"></i></li>
             </a>
             <a
-                href="mailto:shakeanehinds97@gmail.com?subject=Nice Portfolio!&body=Hey Shakeane,%0D%0A I'd love to to tallk more about your projects and possibly working together.">
+                href="mailto:shakeanehinds97@gmail.com?subject=Nice Portfolio!&body=Hey Shakeane,%0D%0A I'd love to to talk more about your projects and possibly working together.">
                 <li class="nav-item icon"><i class="fas fa-envelope"></i></li>
             </a>
         </ul>
