Added social icon

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <!-- body content -->
         <div class="main">
             <section>
-                <h1 class="section-title">A little backstory</h1>
+                <h1 class="section-title">Who am I?</h1>
                 <div class="section-body">
                     <div class="section-image"><svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%"
                             viewBox="0 0 1032 741.753">
@@ -666,7 +666,7 @@
             <section>
                 <h1 class="section-title">Projects</h1>
                 <div id="projects" class="section-body two">
-                    <div class="project-card">
+                    <!-- <div class="project-card">
                         <img src="/assets/right.jpg" alt="project image" class="card-img">
                         <div class="card-content">
                             <h3 class="card-title">Portfolio</h3>
@@ -692,57 +692,7 @@
                                 </a>
                             </div>
                         </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="/assets/right.jpg" alt="project image" class="card-img">
-                        <div class="card-content">
-                            <h3 class="card-title">Portfolio</h3>
-                            <h4 class="card-subtitle">Last updated: 03.04.20</h4>
-                            <div class="tags">
-                                <div class="tag-icon">
-                                    <h6><i class="fab fa-js"></i>
-                                        Javascript </h6>
-                                </div>
-                                <div class="tag-icon">
-                                    <h6><i class="fab fa-sass"></i>
-                                        Sass</h6>
-                                </div>
-                            </div>
-                            <p class="card-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum
-                                dolor, blanditiis placeat reiciendis dolores tenetur vero cupiditate provident,
-                                accusantium animi incidunt eos dolorem omnis eum, aliquam et itaque culpa ipsam.</p>
-                            <div class="project-cta">
-                                <a href="https://github.com/shakeanehinds/shakeanehinds.github.io">
-                                    <h5 class="tip">View Project <i class="fas fa-long-arrow-alt-right"></i></h5>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="project-card">
-                        <img src="/assets/right.jpg" alt="project image" class="card-img">
-                        <div class="card-content">
-                            <h3 class="card-title">Portfolio</h3>
-                            <h4 class="card-subtitle">Last updated: 03.04.20</h4>
-                            <div class="tags">
-                                <div class="tag-icon">
-                                    <h6><i class="fab fa-js"></i>
-                                        Javascript </h6>
-                                </div>
-                                <div class="tag-icon">
-                                    <h6><i class="fab fa-sass"></i>
-                                        Sass</h6>
-                                </div>
-                            </div>
-                            <p class="card-body">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum
-                                dolor, blanditiis placeat reiciendis dolores tenetur vero cupiditate provident,
-                                accusantium animi incidunt eos dolorem omnis eum, aliquam et itaque culpa ipsam.</p>
-                            <div class="project-cta">
-                                <a href="https://github.com/shakeanehinds/shakeanehinds.github.io">
-                                    <h5 class="tip">View Project <i class="fas fa-long-arrow-alt-right"></i></h5>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
+                    </div> -->
 
                 </div>
             </section>
@@ -1351,7 +1301,7 @@
                                 <div class="title">2021</div>
                                 <div class="body">
                                     <h4>University of the West Indies</h4>
-                                    <h5>BSc. Computer Science</h5>
+                                    <h5 class="accent">BSc. Computer Science</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, maiores ipsam.
                                         Blanditiis quas dolor culpa delectus repellendus commodi eius quaerat illo,
                                         veritatis molestias consequatur suscipit itaque tempore sapiente id ut.</p>
@@ -1361,7 +1311,7 @@
                                 <div class="title">2016</div>
                                 <div class="body">
                                     <h4>Moneague College</h4>
-                                    <h5>AS. Management Information Systems</h5>
+                                    <h5 class="accent">AS. Management Information Systems</h5>
                                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio molestiae
                                         deserunt aperiam illo expedita delectus dicta reiciendis obcaecati, magni est.
                                     </p>
@@ -1414,6 +1364,8 @@
         <!-- content -->
         <div class="copy">
             <p>Made with <i class="fas fa-heart icon pop"></i> and a potato</p>
+            <div id="twitter" class="social-float"><a href="https://twitter.com/shakjm_" target="_blank"><i
+                        class="fab fa-twitter"></i></a></div>
         </div>
 
     </div>
