--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/public/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link href="dist/css/main.min.css" rel="stylesheet">
     <!-- <link href="css/main.css" rel="stylesheet"> -->
     <script src="https://kit.fontawesome.com/0e64e7fc54.js" crossorigin="anonymous" defer></script>
