added copyright logic

--- a/index.html
+++ b/index.html
@@ -1367,9 +1367,11 @@
         </div>
         <!-- content -->
         <div class="copy">
-            <p>Made with <i class="fas fa-heart icon pop"></i> and a potato</p>
+            <p id="copyright">Made with <i class="fas fa-heart icon pop"></i> and a potato
+            </p>
             <div id="twitter" class="social-float"><a href="https://twitter.com/shakjm_" target="_blank"><i
                         class="fab fa-twitter"></i></a></div>
+
         </div>
 
     </div>
