Added twitter widget

--- a/index.html
+++ b/index.html
@@ -282,16 +282,15 @@
                             through the use of technology, making tech more accessible to those with disabilities and
                             improving the experience people have when they interface with software.</p>
                     </div>
-                    <div class="section-content">
-                        <h3>Title</h3>
-                        <p>By doing my part as a software developer I want to breathe life into ideas, build amazing
-                            user
-                            experiences and develop software solutions that will literally shape the future. Striking
-                            the
-                            balance between visually captivating and near-perfect execution is my end goal of becoming
-                            an
-                            amazing designer/developer. </p>
+                    <div class="section-content tweets">
+                        <h3>Latest Tweets</h3>
+                        <p><a class="twitter-timeline" href="https://twitter.com/shakjm_"
+                                data-chrome="noheader nofooter noborders transparent noscrollbar" data-tweet-limit="2"
+                                dnt="true">Tweets by shakjm_</a>
+                            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        </p>
                     </div>
+
                 </div>
             </section>
         </div>
