--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 
             <div class="info-left">
                 <div href="#">
-                    <div class="inner" onclick="kill_motion()">
+                    <div class="inner" onclick="killMotion()">
                         <h3 class="tip">Hover effect</h3>
-                        <input id="chck" value="true" type="checkbox" onclick="kill_motion(this.value)">
+                        <input id="chck" value="true" type="checkbox" onclick="killMotion(this.value)">
                         <label for="chck" class="check-trail">
                             <span class="check-handler"></span>
                         </label>
